fix to prevent overflow on search form

--- a/resources/assets/styles/components/_forms.scss
+++ b/resources/assets/styles/components/_forms.scss
@@ -5,12 +5,13 @@
 
 .search-form label {
   @extend .form-group;
-
   font-weight: normal;
+  flex: 1 1 auto;
 }
 
 .search-form .search-field {
   @extend .form-control;
+  width: 100%;
 }
 
 .search-form .search-submit {
